NN-5031 Spring Boot upgrade to 5.2.2 version